# igni-chat

./: .gitignore  AGENTS.md  DESIGN.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
.ketchup/: state.json
.pi/skills/dependabot-fix/: SKILL.md  parse-fix.mjs  parse-fix.test.mjs
dev/synapse/: .gitignore  docker-compose.yml  provision.sh
src/: App.css  App.styles.test.tsx  App.test.ts  App.test.tsx  App.tsx  matrix.test.ts  matrix.ts  vite-env.d.ts
src-matrix/: Cargo.toml
src-matrix/src/: lib.rs
src-matrix/tests/: login_result.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
src/components/: Button.css  Button.test.tsx  Button.tsx  Input.css  Input.test.tsx  Input.tsx
src/features/chat/: Conversation.tsx  RoomList.tsx  matrix.test.ts  matrix.ts
src/features/login/: Login.tsx  matrix.test.ts  matrix.ts
src/styles/: base.css  chat.css  chat.test.ts  login.css  tokens.css  tokens.test.ts
