[package]
name = "igni-chat"
version = "0.1.0"
description = "Igni-chat — tracer-bullet desktop Matrix client"
authors = ["you"]
edition = "2021"

[lib]
name = "igni_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
matrix-sdk = "0.18"
igni-matrix = { path = "../src-matrix", features = ["native"] }
